--- a/lake.html
+++ b/lake.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="lake.css" />
   <link rel="stylesheet" href="CSS/mobile.css" />
+  <link rel="stylesheet" href="CSS/mobile-fixes.css" />
 </head>
 <body>
   <div id="main">
