--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="contact.css" />
+  <link rel="stylesheet" href="CSS/mobile-fixes.css" />
 </head>
 <body>
   <div id="main">
@@ -19,6 +20,12 @@
 
       <nav>
         <img src="./Logo-light.png" alt="Logo" class="logo" />
+
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
 
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
