--- a/ruaha.html
+++ b/ruaha.html
@@ -8,7 +8,8 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="ruaha.css" />
-  <link rel="stylesheet" href="CSS/mobile.css />
+  <link rel="stylesheet" href="CSS/mobile.css" />
+  <link rel="stylesheet" href="CSS/mobile-fixes.css" />
 
 </head>
 <body>
