--- a/zanzibr.html
+++ b/zanzibr.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="Zanzibar.css" />
+  <link rel="stylesheet" href="CSS/mobile-fixes.css" />
 </head>
 <body>
   <div id="main">
@@ -20,6 +21,11 @@
 
       <nav>
         <img src="  ./Logo-Main-768x330.png  " alt="Logo" class="logo" />
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
 
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
