--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <div>
-        <h1 style="text-align: center; margin-top: 30vh; ">live Project 2025</h1>
+    <div style="text-align: center; margin-top: 30vh;" >
+        <h1>live Project 2025</h1>
+        <b style="color: rgb(161, 6, 212);">Project Name: <span>blank</span></b>
+        <p style="color: rgb(30, 23, 181);" > Today is the <span>0</span>th day of the project.</p>
+
     </div>
 </body>
 
