--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>live Project 2025</title>
-    <!-- <meta http-equiv="refresh" content="5; url=home.html" > -->
+     <meta http-equiv="refresh" content="5; url=sory.html" > 
 </head>
 
 <body>
