--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3 id="output">रिजल्ट यहाँ दिखेगा</h3>
     </div>
 
-    <script src="logic.js"></script>
+    <script src="logic.c"></script>
     <script src="app.js"></script>
 </body>
 </html>
