--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home - My Work Hub</title>
+<title>Susheelcoder | Work Hub</title>
 
 <style>
 :root{
@@ -16,66 +16,87 @@
 
 *{
     box-sizing:border-box;
+    margin:0;
+    padding:0;
+}
+
+html{
+    scroll-behavior:smooth;
 }
 
 body{
-    margin:0;
-    font-family: "Segoe UI", system-ui, sans-serif;
-    background: linear-gradient(135deg,#eef2ff,#f8fafc);
+    font-family:"Segoe UI", system-ui, sans-serif;
+    background:linear-gradient(135deg,#eef2ff,#f8fafc);
     color:#1e293b;
+    scroll-snap-type:y mandatory;
 }
 
-/* Container */
-.container{
-    max-width:900px;
-    margin:auto;
-    padding:30px 20px;
-}
-
-/* Header */
-h1{
-    text-align:center;
-    font-size:2.2rem;
-    margin-bottom:10px;
-}
-
-.subtitle{
-    text-align:center;
-    color:#64748b;
-    margin-bottom:40px;
-}
-
-/* Card Common */
+/* Common Section */
 section{
-    background:var(--card);
-    padding:22px;
-    border-radius:14px;
-    margin-bottom:22px;
-    box-shadow:0 10px 25px rgba(0,0,0,0.06);
-    transition:0.3s;
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding:40px 25px;
+    scroll-snap-align:start;
 }
 
-section:hover{
-    transform:translateY(-4px);
-    box-shadow:0 15px 30px rgba(0,0,0,0.1);
+/* Inner layout */
+.section-inner{
+    max-width:1100px;
+    width:100%;
+    display:flex;
+    gap:50px;
+    align-items:center;
+}
+
+/* Text */
+.section-text{
+    flex:1;
+}
+
+.section-text h2{
+    font-size:2.4rem;
+    margin-bottom:15px;
+}
+
+.section-text p,
+.section-text li{
+    font-size:1.1rem;
+    color:#475569;
+    line-height:1.7;
+}
+
+.section-text ul{
+    margin-left:18px;
+}
+
+/* Image */
+.section-img{
+    flex:1;
+    text-align:center;
+}
+
+.section-img img{
+    width:100%;
+    max-width:420px;
+    border-radius:20px;
+    box-shadow:0 20px 40px rgba(0,0,0,0.15);
 }
 
 /* Tags */
 .tag{
-    display:inline-flex;
-    align-items:center;
-    gap:6px;
+    display:inline-block;
+    padding:6px 14px;
+    border-radius:999px;
     font-size:12px;
     font-weight:700;
-    letter-spacing:0.5px;
-    padding:6px 12px;
-    border-radius:999px;
-    margin-bottom:10px;
+    margin-bottom:12px;
 }
 
-/* Sections */
+/* Section Colors */
 .current-work{
-    border-left:6px solid var(--blue);
+    background:#ffffff;
 }
 .current-work .tag{
     background:#dbeafe;
@@ -83,7 +104,7 @@ section:hover{
 }
 
 .new-ideas{
-    border-left:6px solid var(--green);
+    background:#f0fdfa;
 }
 .new-ideas .tag{
     background:#ccfbf1;
@@ -91,87 +112,108 @@ section:hover{
 }
 
 .old-work{
-    border-left:6px solid var(--gray);
-    opacity:0.9;
+    background:#f1f5f9;
 }
 .old-work .tag{
     background:#e2e8f0;
     color:var(--gray);
 }
 
-/* List */
-ul{
-    padding-left:18px;
-}
-li{
-    margin-bottom:8px;
+/* Reverse layout */
+.reverse .section-inner{
+    flex-direction:row-reverse;
 }
 
-/* Footer Link */
-.back{
-    text-align:center;
-    margin-top:35px;
-}
-
-.back a{
-    text-decoration:none;
-    color:white;
+/* Footer Button */
+.back-btn{
+    margin-top:25px;
+    display:inline-block;
     background:linear-gradient(135deg,#2563eb,#1d4ed8);
-    padding:12px 22px;
+    color:#fff;
+    padding:12px 26px;
     border-radius:999px;
+    text-decoration:none;
     font-weight:600;
-    box-shadow:0 8px 18px rgba(37,99,235,0.35);
-    transition:0.3s;
-}
-
-.back a:hover{
-    transform:scale(1.05);
-    box-shadow:0 12px 25px rgba(37,99,235,0.45);
+    box-shadow:0 10px 25px rgba(37,99,235,0.4);
 }
 
 /* Mobile */
-@media(max-width:600px){
-    h1{font-size:1.8rem;}
+@media(max-width:768px){
+    .section-inner{
+        flex-direction:column;
+        text-align:center;
+    }
+    .section-text h2{
+        font-size:1.9rem;
+    }
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<!-- SECTION 1 -->
+<section class="current-work">
+    <div class="section-inner">
 
-    <h1>Susheelcoder's Work Hub</h1>
-    <p class="subtitle">📌 Current progress, ideas & completed work at one place</p>
+        <div class="section-text">
+            <span class="tag">🚀 Working Now</span>
+            <h2>Website Development</h2>
+            <p>
+                Abhi <strong>Home Page</strong> ka layout aur structure design ho raha hai.
+                Isme modern UI, animations aur responsive design add kiya ja raha hai.
+            </p>
+        </div>
 
-    <section class="current-work">
-        <span class="tag">🚀 Working Now</span>
-        <h3>Website Development – Home Page</h3>
-        <p>
-            Abhi <strong>home.html</strong> ka layout aur roadmap ready ho raha hai.  
-            Next step me advanced styling, animation aur responsive layout add hoga.
-        </p>
-    </section>
+        <div class="section-img">
+            <img src="IMG/work.png" alt="Working">
+        </div>
 
-    <section class="new-ideas">
-        <span class="tag">💡 Upcoming Ideas</span>
-        <ul>
-            <li>Dashboard me Dark / Light mode toggle</li>
-            <li>Fully mobile-first responsive design</li>
-            <li>Modern Contact Me form with validation</li>
-        </ul>
-    </section>
-
-    <section class="old-work">
-        <span class="tag">📂 Archive</span>
-        <p>✅ Index page ka basic structure complete (30 Aug 2025)</p>
-        <p>✅ Logo design aur font selection final</p>
-    </section>
-
-    <div class="back">
-        <a href="index.html">← Back to Index Page</a>
     </div>
+</section>
 
-</div>
+<!-- SECTION 2 -->
+<section class="new-ideas reverse">
+    <div class="section-inner">
+
+        <div class="section-text">
+            <span class="tag">💡 Upcoming Ideas</span>
+            <h2>Future Enhancements</h2>
+            <ul>
+                <li>Dark / Light Mode Toggle</li>
+                <li>Advanced animations</li>
+                <li>Contact form with validation</li>
+                <li>Performance optimization</li>
+            </ul>
+        </div>
+
+        <div class="section-img">
+            <img src="IMG/ideas.png" alt="Ideas">
+        </div>
+
+    </div>
+</section>
+
+<!-- SECTION 3 -->
+<section class="old-work">
+    <div class="section-inner">
+
+        <div class="section-text">
+            <span class="tag">📂 Archive</span>
+            <h2>Completed Work</h2>
+            <p>✅ Index page basic structure complete</p>
+            <p>✅ Logo design & font finalized</p>
+            <p>✅ Initial responsive testing done</p>
+
+            <a href="index.html" class="back-btn">← Back to Index</a>
+        </div>
+
+        <div class="section-img">
+            <img src="IMG/archive.png" alt="Archive">
+        </div>
+
+    </div>
+</section>
 
 </body>
 </html>
