--- a/u.html
+++ b/u.html
@@ -56,19 +56,59 @@ path{
     <path d="M50 20 L50 70"/>
 
     <!-- Curve -->
-    <path d="M50 70 A10 10 0 0 0 70 80"/>
+    <path d="M50 70 A16 9 0 0 0 70 80"/>
 
-    <!-- Horizontal -->
-    <path d="M80 80 L70 80"/>
 
     <!-- Curve down -->
-    <path d="M86 90 A10 10 0 0 0 75 80"/>
+    <path d="M80 94 A13 20 0 0 0 70 80"/>
 
     <!-- Horizontal -->
-    <path d="M85 90 L100 90"/>
+    <path d="M80 93 L100 93"/>
 
 </svg>
 </div>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+<svg viewBox="0 0 100 100">
+  <path d="
+    M10 0 L10 70
+    A10 10 0 0 0 30 70
+    L30 20
+    A10 10 0 0 1 50 20
+    L50 70
+    A10 10 0 0 0 70 80
+    L80 80
+    A10 10 0 0 0 85 90
+    L100 90
+  " stroke="#0066ff" stroke-width="2" fill="none"/>
+</svg>
+
+
+
+
+<svg viewBox="0 0 100 100">
+  <path d="
+    M10 0 L10 70
+    A10 10 0 0 0 30 70
+    L30 20
+    A10 10 0 0 1 50 20
+    L50 70
+    A16 9 0 0 0 70 80
+    A13 20 0 0 1 80 94
+    L100 94
+  "
+  stroke="#0066ff"
+  stroke-width="2"
+  fill="none"/>
+</svg>
