--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+  <meta http-equiv="refresh" content="3">
+
 <!DOCTYPE html>
 <html lang="hi">
 
@@ -91,7 +92,7 @@
       stroke-linejoin: round;
       stroke-dasharray: 300;
       stroke-dashoffset: 200;
-      animation: drawPath 1.5s ease forwards 0.5s;
+      animation: drawPath 0.9s ease forwards 0.1s;  
     }
 
     @keyframes drawPath {
@@ -173,13 +174,11 @@
     L50 70
     A16 9 0 0 0 70 80
     A13 20 0 0 1 80 94
-    L100 94
+    L100 95
   " stroke="#0066ff" stroke-width="2" fill="none" />
 
 
-          <!-- <circle cx="90" cy="90" r="5" fill="white" /> -->
 
-          <!-- <circle cx="45" cy="16" r="3" fill="#5e1a84" /> -->
         </svg>
       </div>
     </div>
@@ -199,10 +198,13 @@
     window.addEventListener('load', () => {
       setTimeout(() => {
         document.body.classList.add('loaded');
-      }, 350000000); // 3.5 seconds ka delay
+      }, 2600); // 2 seconds ka delay
     });
   </script>
 
 </body>
 
 </html>
+
+
+
