--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <meta http-equiv="refresh" content="3">
+<meta http-equiv="refresh" content="3">
 
 <!DOCTYPE html>
 <html lang="hi">
@@ -92,7 +92,7 @@
       stroke-linejoin: round;
       stroke-dasharray: 300;
       stroke-dashoffset: 200;
-      animation: drawPath 0.9s ease forwards 0.1s;  
+      animation: drawPath 0.9s ease forwards 0.1s;
     }
 
     @keyframes drawPath {
@@ -187,7 +187,7 @@
     </div>
   </div>
   </div>
-
+  <button><a href="/make.html">open</a></button>
   <div id="main-content">
     <h1>Swagat hai Haproven par!</h1>
     <p>Aapki website ab puri tarah se load ho chuki hai.</p>
